<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SurtidoIntentImpl</string>
    <string name="action_settings">Settings</string>
    <string name="conociendo">Conociendo la EPS</string>
    <string name="ubicando">Localizacion</string>
    <string name="navegando">Acceso a la web</string>
    <string name="URL_udl">http://www.udl.cat</string>
    <string name="telefono">Acceso al telefono</string>
    <string name="contactando">Tlf. de contacto: 691.77.82.50</string>
    <string name="telef">691778250</string>
    <string name="sms">Enviar mensaje</string>
    <string name="destino_sms">Tlf. destino: 691.77.82.50</string>
    <string name="destino_email">Email destinatario: sss@udl.cat</string>
    <string name="Imagenes">Imagenes</string>
    <string name="acceder_galeria">Acceder a Galeria</string>


    <string name="Boto1">Por coord.</string>
    <string name="Boto2">Por direcc.</string>
    <string name="Boto3">Por URL</string>
    <string name="Boto4">Google</string>
    <string name="Boto5">Marcar</string>
    <string name="Boto6">Acceder Contactos</string>
    <string name="Boto7">Llamar</string>
    <string name="Boto8">Enviar SMS</string>
    <string name="Boto9">Enviar E-mail</string>
    <string name="Boto10">Ver Galeria</string>
    <string name="Boto11">Tomar Foto</string>

    <string name="opcio1">Seleccionado Localizacion por coordenadas</string>
    <string name="opcio2">Seleccionado Localizacion por dirección</string>
    <string name="opcio3">Accediendo a la web</string>
    <string name="opcio4">Buscando en Google</string>
    <string name="opcio5">Marcando el Tlfn.</string>
    <string name="opcio6">Accediendo a contactos</string>
    <string name="opcio7">Llamando al Tlfn.</string>
    <string name="opcio8">Enviando un SMS</string>
    <string name="opcio9">Enviando un e-mail</string>
    <string name="opcio10">Accediendo a la especificada</string>


</resources>
